--- a/.github/workflows/tender.yml
+++ b/.github/workflows/tender.yml
@@ -19,18 +19,18 @@ jobs:
       - name: Install system dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y tesseract-ocr poppler-utils libtesseract-dev  # Critical fix
+          sudo apt-get install -y tesseract-ocr poppler-utils
           
       - name: Install Python packages
         run: |
-          pip install pytesseract openai pdf2image
+          pip install openai pytesseract pdf2image  # Uses latest OpenAI (v1.0+)
           
       - name: Run OCR and AI
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
         run: |
           python scripts/ocr.py
-          python scripts/report.py
+          python scripts/report.py  # Updated to new API
           
       - name: Upload Report
         uses: actions/upload-artifact@v4
